Add A Message Expander into SnailBar

--- a/mdwidgets/src/main/res/values/strings.xml
+++ b/mdwidgets/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">MDWidgets</string>
     <string name="snailbar_icon_description">SnailBar Icon</string>
+    <string name="expand_msg">Expanding Msg When the msg over 3 lines</string>
 </resources>
