--- a/mdwidgets/src/main/res/values/strings.xml
+++ b/mdwidgets/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">MDWidgets</string>
     <string name="snailbar_icon_description">SnailBar Icon</string>
     <string name="expand_msg">Expanding Msg When the msg over 3 lines</string>
+    <string name="close">Close</string>
+    <string name="more">More</string>
 </resources>
