--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">MD2Widgets</string>
+    <string name="title">标题</string>
+    <string name="add">添加</string>
+    <string name="delete">删除</string>
+    <string name="num">序号</string>
 </resources>
