--- a/mdwidgets/src/main/res/values/strings.xml
+++ b/mdwidgets/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MDWidgets</string>
+    <string name="md_library_name" translatable="false">MDWidgets</string>
     <string name="snailbar_icon_description">SnailBar Icon</string>
     <string name="expand_msg">Expanding Msg When the msg over 3 lines</string>
     <string name="close">Close</string>
